# BHPTNR_Remnant

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  tutorial.ipynb
.github/workflows/: publish.yml  test.yml
BHPTNRremnant/: __init__.py  point_particle.py  remnant.py
BHPTNRremnant/tests/: test_remnant.py
bhptnrsur_remnant/: analytical_fits.py  point_particle.py  remnant.py
data/: BHPTNRSur1dq1e3_remnant.pickle
tutorials/: tutorial.ipynb
